--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 hello
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+  axios.get('https://catfact.ninja/fact')
+  .then(function (response) {
+    // handle success
+    console.log(response);
+  })
+  .catch(function (error) {
+    // handle error
+    console.log(error);
+  });
+</script>
