--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 hello
+<p id='p1'></p>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
   axios.get('https://catfact.ninja/fact')
   .then(function (response) {
     // handle success
+    document.getElementById("p1").innerHTML = response.data.fact;
     console.log(response);
   })
   .catch(function (error) {
