--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ hello
   axios.get('https://mandobot.pythonanywhere.com/api/hello')
   .then(function (response) {
     // handle success
-    document.getElementById("p1").innerHTML = response.data.message;
+    document.getElementById("p1").innerHTML = response.data;
     console.log(response);
   })
   .catch(function (error) {
